--- a/src/assets/scss/reset.css
+++ b/src/assets/scss/reset.css
@@ -59,14 +59,4 @@ button {
   outline: none;
 }
 
-:global body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-:global code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=reset.css.map */
