--- a/src/assets/scss/common.css
+++ b/src/assets/scss/common.css
@@ -7,5 +7,22 @@
 :global code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+:global .container {
+  background-color: #282c34;
+  color: white;
+}
+:global .wrapper {
+  position: relative;
+  box-sizing: border-box;
+  padding: 32px 50px 32px 16px;
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+@media only screen and (min-width: 576px) {
+  :global .wrapper {
+    padding: 50px 100px;
+  }
+}
 
 /*# sourceMappingURL=common.css.map */
