--- a/src/components/FavoritesPage/FavoritesPage.module.css
+++ b/src/components/FavoritesPage/FavoritesPage.module.css
@@ -1,3 +1,26 @@
+.title {
+  font-size: 24px;
+  text-align: center;
+}
+@media only screen and (min-width: 768px) {
+  .title {
+    font-size: 45px;
+  }
+}
 
+.btnContainer {
+  display: block;
+  text-align: center;
+  margin: 50px 0 0;
+}
 
-/*# sourceMappingURL=AddEditPage.module.css.map */
+div.wrapper {
+  padding: 32px 16px;
+}
+@media only screen and (min-width: 576px) {
+  div.wrapper {
+    padding: 50px 100px;
+  }
+}
+
+/*# sourceMappingURL=FavoritesPage.module.css.map */
