--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -18,7 +18,6 @@
 }
 
 .post {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono", "Droid Sans Mono", monospace, monospace;
   box-sizing: border-box;
   width: 100%;
   padding: 16px 8px;
@@ -72,10 +71,24 @@
   transition: all 300ms ease-in-out;
 }
 
+.iconColor {
+  fill: white;
+  transition: all 300ms ease-in-out;
+}
+
+.iconColorActive {
+  fill: cadetblue;
+  transition: all 300ms ease-in-out;
+}
+
 .icon:hover {
   transform: scale(1.1);
 }
 
-.icon:hover g {
+.icon:hover .iconColor {
   fill: cadetblue;
+}
+
+.icon:hover .iconColorActive {
+  fill: white;
 }
